--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>esercizio the WALL</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <link rel="stylesheet" href="main.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <div class=<img src="images/1.jpg" class="img-fluid" alt=""></div>"
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-12"><img src="images/1.jpg" width="100%" /></div>
+      </div>
+      <div class="row">
+        <div class="col-6"><img src="images/2.jpg" alt="" /></div>
+        <div class="col-6"><img src="images/3.jpg" alt="" /></div>
+      </div>
+      <div class="row">
+        <div class="col-xl-3 col-md-6"><img src="images/4.jpg" alt="" /></div>
+        <div class="col-xl-3 col-md-6"><img src="images/5.jpg" alt="" /></div>
+        <div class="col-xl-3 col-md-6"><img src="images/6.jpg" alt="" /></div>
+        <div class="col-xl-3 col-md-6"><img src="images/7.jpg" alt="" /></div>
+      </div>
+      <div class="row">
+        <div class="col-xl-3 col-lg-12"><img src="images/8.jpg" alt="" /></div>
+        <div class="col-xl-3 col-lg-8"><img src="images/9.jpg" alt="" /></div>
+        <div class="col-xl-3 col-lg-4"><img src="images/10.jpeg" alt="" /></div>
+      </div>
+    </div>
   </body>
-  </html>
+</html>
