--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
         <div class="col-xl-3 col-md-6"><img src="images/7.jpg" alt="" /></div>
       </div>
       <div class="row">
-        <div class="col-xl-3 col-lg-12"><img src="images/8.jpg" alt="" /></div>
-        <div class="col-xl-3 col-lg-8"><img src="images/9.jpg" alt="" /></div>
-        <div class="col-xl-3 col-lg-4"><img src="images/10.jpeg" alt="" /></div>
+        <div class="col-xl-4 col-lg-12"><img src="images/8.jpg" alt="" /></div>
+        <div class="col-xl-4 col-lg-8"><img src="images/9.jpg" alt="" /></div>
+        <div class="col-xl-4 col-lg-4"><img src="images/10.jpeg" alt="" /></div>
+      </div>
+      <div class="row">
+        
       </div>
     </div>
   </body>
