--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         <div class="col-xl-4 col-lg-4"><img src="images/10.jpeg" alt="" /></div>
       </div>
       <div class="row">
-        
+        <div class="col-xs-12 col-md-6 col-lg-4 col-xl-6 col-xxl-2"><img src="images/11.jpg" alt="" /></div>
+        <div class="col-xs-12 col-md-6 col-lg-4 col-xl-6 col-xxl-2"><img src="images/12.jpg" alt="" /></div>
+        <div class="col-xs-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2"><img src="images/13.jpg" alt="" /></div>
+        <div class="col-xs-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2"><img src="images/14.jpg" alt="" /></div>
+        <div class="col-xs-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2"><img src="images/15.jpg" alt="" /></div>
+        <div class="col-xs-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2"><img src="images/16.jpeg" alt="" /></div>
       </div>
     </div>
   </body>
